# learning-practice-django

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  manage.py  pyproject.toml
aogiri/: asgi.py  celery.py  redis_conn.py  settings.py  urls.py  wsgi.py
orders/: admin.py  context_processors.py  forms.py  models.py  ordermanager.py  tests.py  urls.py  utils.py  views.py
orders/migrations/: 0001_initial.py  0002_rename_mixins_mixin.py  0003_alter_order_food_id.py  0004_remove_order_bonuses_remove_order_price_and_more.py  0005_rename_order_id_mixin_order_and_more.py  0006_alter_order_coffee_alter_order_food_and_more.py  0007_alter_order_coffee.py  0008_remove_order_coffee_remove_order_food_and_more.py
products/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
products/migrations/: 0001_initial.py  0002_coffee_volume.py  0003_alter_coffee_volume.py  0004_alter_coffee_volume.py  0005_coffee_cinnamon_coffee_milk_coffee_syrup_and_more.py  0006_coffee_image.py  0007_food_image_alter_coffee_image.py
products/templatetags/: volumes.py
templates/: base.html  coffee_all.html  food_all.html  main_page.html  orders_barista.html  orders_order.html  pagination.html  pagination_next.html  pagination_prev.html  product_add.html  user_edit.html  user_email_confirm.html  user_email_sent.html  user_email_success.html  user_login.html  user_password_change.html  user_password_confirm.html  user_password_sent.html  user_password_success.html  user_profile.html  user_register.html
users/: admin.py  forms.py  models.py  tasks.py  urls.py  views.py
(+7 files in other folders)
